# sandtrap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  recommendations.md
.github/workflows/: test.yml
docs/: filesystem.md  policy.md  process.md  roadmap.md  sandbox.md  security.md  serialization.md  task-mode.md
sandtrap/: __init__.py  builtins.py  errors.py  factory.py  gates.py  policy.py  refs.py  resource_limits.py  rewriter.py  sandbox.py  wrappers.py
sandtrap/fs/: __init__.py  context.py  memory.py  patch.py  protocol.py  remote.py
sandtrap/net/: __init__.py  context.py  patch.py  socket.py
sandtrap/process/: __init__.py  landlock.py  platform.py  protocol.py  sandbox.py  seatbelt.py  seccomp.py  worker.py
sblite/: __init__.py  _traceback.py  builtins.py  errors.py  gates.py  policy.py  refs.py  resource_limits.py  rewriter.py  sandbox.py  wrappers.py
sblite/fs/: __init__.py  context.py  memory.py  patch.py  protocol.py
sblite/net/: __init__.py  context.py  patch.py  socket.py
tests/: test_async.py  test_checkpoint.py  test_context_capture.py  test_echo.py  test_enhanced_policy.py  test_fs.py  test_gates.py  test_imports.py  test_isolation.py  test_net.py  test_policy.py  test_process_sandbox.py  test_recursive_and_qualified_policy.py  test_refs.py  test_remote_fs.py  test_resource_limits.py  test_rewriter.py  test_rpc.py  test_sandbox.py  test_sandbox_factory.py  test_sandbox_sys.py  test_stderr.py  test_stdout.py  test_vfs_import.py  test_wrappers.py
tests/stress/: test_complex_valid.py  test_escapes.py  test_multi_turn.py  test_resource_abuse.py
