[project]
name = "sandtrap"
version = "0.1.12"
description = "Local Python sandbox using AST rewriting, with optional subprocess isolation and kernel-level enforcement."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
keywords = ["sandbox", "security", "ast", "python", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "monkeyfs<0.2.0",
]

[project.urls]
"Homepage" = "https://github.com/ashenfad/sandtrap"
"Bug Tracker" = "https://github.com/ashenfad/sandtrap/issues"
"Documentation" = "https://github.com/ashenfad/sandtrap#readme"
"Source" = "https://github.com/ashenfad/sandtrap"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pandas",
]
process = [
    "landlock; sys_platform == 'linux'",
    "pyseccomp; sys_platform == 'linux'",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["./"], exclude = ["tests*"]}}

[tool.setuptools.package-data]
sandtrap = ["py.typed"]

